Fix things a little bit for responsive thingy
At least it doesn't look too bad with device's width less than 720px

--- a/_sass/_styles.scss
+++ b/_sass/_styles.scss
@@ -1,5 +1,13 @@
 // This file contains custom (non hack.css) styles
 
+.standard {
+  .card {
+    @include fix-screen($on-palm) {
+      height: 420px;
+    }
+  }
+}
+
 .t-hackcss {  // Main prefix to avoid collisions
   &-placard {
     @include media-query($on-palm) {
